--- a/hospital_readmit/sliderule_dsi_inferential_statistics_exercise_3.ipynb
+++ b/hospital_readmit/sliderule_dsi_inferential_statistics_exercise_3.ipynb
@@ -526,7 +526,6 @@
    "metadata": {},
    "source": [
     "****\n",
-    "<div class=\"span5 alert alert-info\">\n",
     "### Exercise\n",
     "\n",
     "Include your work on the following **in this notebook and submit to your Github account**. \n",
@@ -548,7 +547,6 @@
     "You can compose in notebook cells using Markdown: \n",
     "+ In the control panel at the top, choose Cell > Cell Type > Markdown\n",
     "+ Markdown syntax: http://nestacms.com/docs/creating-content/markdown-cheat-sheet\n",
-    "</div>\n",
     "****"
    ]
   },
@@ -812,7 +810,9 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def linear_regression(x, y, prob):\n",
